--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "babelwatch": "babel --watch src --out-dir . --presets react-app/prod"
+    "babelwatch": "babel --watch src --out-dir . --presets react-app/prod",
+    "tailwindscan": "tailwindcss -i ./input.css -o ./dist/output.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
